WIP/API/Register
